fix removed unneeded sout statements